<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait">

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scan"/>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow>

            <EditText
                android:id="@+id/et_tone_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/holo_blue_dark"
                android:textAlignment="center"
                android:inputType="number"/>
            <Spinner
                android:id="@+id/spn_pure_tone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textAlignment="center"
                android:entries="@array/freq"/>
            <EditText
                android:id="@+id/et_tone_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark" />
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/btn_freq_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_blue_dark" />
            <Button
                android:id="@+id/btn_save_hl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_hearing"/>
            <Button
                android:id="@+id/btn_freq_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_dark" />
        </TableRow>
    </TableLayout>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/freq_125" />
            <TextView
                android:id="@+id/txt_l125_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/txt_r125_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/freq_250" />
            <TextView
                android:id="@+id/txt_l250_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/txt_r250_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/freq_500" />
            <TextView
                android:id="@+id/txt_l500_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r500_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/freq_750"/>
            <TextView
                android:id="@+id/txt_l750_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r750_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/freq_1000"/>
            <TextView
                android:id="@+id/txt_l1000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r1000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/freq_1500"/>
            <TextView
                android:id="@+id/txt_l1500_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r1500_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/freq_2000"/>
            <TextView
                android:id="@+id/txt_l2000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r2000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/freq_3000"/>
            <TextView
                android:id="@+id/txt_l3000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r3000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/freq_4000"/>
            <TextView
                android:id="@+id/txt_l4000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r4000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/freq_6000"/>
            <TextView
                android:id="@+id/txt_l6000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r6000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/freq_8000"/>
            <TextView
                android:id="@+id/txt_l8000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView
                android:id="@+id/txt_r8000_hl"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="20sp"
                android:textAlignment="center"/>
            <TextView/>
            <TextView/>
            <TextView/>
        </TableRow>
    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/layout_operation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="*"
        android:visibility="visible">

        <TableRow>

            <EditText
                android:id="@+id/et_mem_choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btn_set_mem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_mem" />

            <Button
                android:id="@+id/btn_read_param"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/read_all_param" />
        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/btn_set_sys_param"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_sys_param" />

            <Button
                android:id="@+id/btn_set_mem_param"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/write_mem_param" />

            <Button
                android:id="@+id/btn_auto_fitting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_fitting" />
        </TableRow>
    </TableLayout>

    <ListView
        android:id="@+id/list_param"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:scrollbars="none"
        android:visibility="gone"/>

    <ListView
        android:id="@+id/list_device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:scrollbars="none" />
</LinearLayout>